# app_news

./: main.py  pyproject.toml  request.md  requests.md
apps/accounts/: serializer.py  views.py
apps/comments/: serializers.py  views.py
apps/comments/migrations/: 0001_initial.py
apps/main/: admin.py  permissions.py  serializers.py  urls.py  views.py
apps/main/migrations/: 0001_initial.py
apps/payment/: admin.py  models.py  serializers.py  views.py
apps/subscribe/: admin.py  models.py  tasks.py  urls.py  views.py
apps/subscribe/management/commands/: create_subscription_product.py
apps/subscribe/migrations/: 0001_initial.py
backend/: pyproject.toml
backend/apps/accounts/: admin.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/comments/: admin.py  models.py  serializers.py  urls.py
backend/apps/main/: serializers.py
backend/apps/payment/: signals.py  tasks.py
backend/apps/payment/migrations/: 0001_initial.py
backend/apps/subscribe/: serializers.py  signals.py
backend/apps/subscribe/management/commands/: fix_stripe_integration.py
backend/conf/: celery.py
conf/: settings.py  urls.py
